<resources>
    <string name="app_name">Freelicious</string>
    <string name="nav_profil">Profil</string>
    <string name="nav_add">Ajouter</string>
    <string name="nav_home">Home</string>
    <string name="login">Entrez votre email</string>
    <string name="password">Entrez votre mot de passe</string>
    <string name="login_title">Se connecter</string>
    <string name="password_confirm">Confirmez à nouveau</string>
    <string name="register_title">S\'inscrire</string>
    <string name="username_register">Entrez votre identifiant</string>
    <string name="change_email">Modifier votre email</string>
    <string name="change_picture">Modifier votre photo</string>
    <string name="change_justificatif">Modifier votre justificatif de statut</string>
    <string name="validate">Valider</string>
    <string name="slogan">Parce qu\'aider n\'attend pas !</string>
    <string name="redirect_to_register">Pas de compte ? Créez-en un ici !</string>
    <string name="disconnect_btn">Se déconnecter</string>
    <string name="username_profil_title">Identifiant : </string>
    <string name="email_profil_title">Email : </string>
    <string name="statut_profile_title">Statut : </string>
    <string name="profil_btitle">Profil</string>
    <string name="param_profile_btitle">Paramètres</string>
    <string name="chat_profile_btitle">Chat</string>
    <string name="notifications_profil_btitle">Notifications</string>
    <string name="empty_info">----</string>
    <string name="added_the">Ajouté le</string>
    <string name="donated_by">Donné par :</string>
    <string name="permeates_the">Périme le</string>
    <string name="category">Catégorie :</string>
    <string name="code_postal">Code Postal :</string>
    <string name="brand">Marque :</string>
    <string name="home_title">Voici tous les produits disponibles</string>
    <string name="all_owned_product">Tous vos produits</string>
    <string name="reserver">Réserver</string>
    <string name="reservation_complete">Produit réservé !</string>
    <string name="undo">Annuler</string>
    <string name="settings">Paramètres</string>
    <string name="contact_receiver">Contacter le receveur</string>
    <string name="channel_name">a channel</string>
    <string name="channel_description">a channel description</string>
    <string name="logo">Logo freelicious</string>
    <string name="delete">Supprimer</string>
    <string name="titre_produit_placeholder_add">Titre du produit</string>
    <string name="marque_produit_placeholder_add">Marque du produit</string>
    <string name="date_peremption_placeholder_add">Date de péremption</string>
    <string name="title_add">Ajouter un produit</string>
    <string name="code_postal_placeholder_add">Code postal</string>
    <string name="peremption_btn_text_add">Péremption</string>
</resources>