<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="252dp"
        android:background="@drawable/back"
        android:text="@string/register_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username_register"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:hint="@string/username_register"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_register"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/back"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.647" />

    <Button
        android:id="@+id/validate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validate"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.834" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_confirm_register"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        android:background="@drawable/back"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.737" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_register"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:hint="@string/login"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.553" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117"
        app:srcCompat="@drawable/freelicious" />
</androidx.constraintlayout.widget.ConstraintLayout>