<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/settings"
    tools:context=".fragments.SettingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/validate_btn3"
            android:layout_width="149dp"
            android:layout_height="47dp"
            android:visibility="visible"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.653" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/justificatif_statut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/change_justificatif"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.561" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/change_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/change_picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.47" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/change_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/change_email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.383" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>