<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_constraint_layout_item_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/titre_product_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/empty_info"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/separator_item_product"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titre_product_item" />

            <Button
                android:id="@+id/reserve_btn_item_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/green"
                android:text="@string/reserver"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout_item_product" />

            <LinearLayout
                android:id="@+id/linearLayout_item_product"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator_item_product">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/back"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/brand_title_list_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/brand"
                        android:textColor="@android:color/secondary_text_light"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/marque_product_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/empty_info"
                        android:textColor="@android:color/tertiary_text_light"
                        android:textStyle="italic"
                        app:layout_constraintStart_toEndOf="@+id/brand_title_list_item"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/back"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/categorie_title_list_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:textColor="@android:color/secondary_text_light"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/categorie_list_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/empty_info"
                        android:textColor="@android:color/tertiary_text_light"
                        app:layout_constraintStart_toEndOf="@+id/categorie_title_list_item"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/back"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/added_date_item_product"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/empty_info"
                        android:textColor="@android:color/tertiary_text_light"
                        app:layout_constraintStart_toEndOf="@+id/added_date_title_item_product"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/added_date_title_item_product"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/added_the"
                        android:textColor="@android:color/secondary_text_light"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/back"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/permeate_date_item_product"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/empty_info"
                        android:textColor="@android:color/tertiary_text_light"
                        app:layout_constraintStart_toEndOf="@+id/perime_title_product"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/perime_title_product"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/permeates_the"
                        android:textColor="@android:color/secondary_text_light"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/back"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/codepostal_title_item_product"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/code_postal"
                        android:textColor="@android:color/secondary_text_light"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/code_postal_item_product"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/empty_info"
                        android:textColor="@android:color/tertiary_text_light"
                        app:layout_constraintStart_toEndOf="@+id/codepostal_title_item_product"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <Button
                android:id="@+id/contact_btn_item_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/contact_receiver"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout_item_product" />

            <Button
                android:id="@+id/suppr_btn_item_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:text="@string/delete"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_btn_item_product" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>